2008-01-21 [colin]	3.2.0cvs58

	* src/summaryview.c
		Fix bug 1457, 'sorting messages on, say, from, 
		should subsort on previous sort choice'. Subsort
		by date when sort is Subject, From, To, Tags.

2008-01-21 [colin]	3.2.0cvs57

	* AUTHORS
	* src/matcher.c
	* src/mimeview.c
	* src/common/ssl.c
	* src/gtk/authors.h
		Fix bug 1478, 'Wrong pthread_create calls all 
		over the place'. Patch by Christian Cornelssen

2008-01-20 [colin]	3.2.0cvs56

	* src/imap.c
	* src/etpan/imap-thread.c
	* src/etpan/imap-thread.h
		Fix bug 1468, 'Use IMAP keyword to 
		store "forwarded" flag'

2008-01-20 [colin]	3.2.0cvs55

	* src/folderutils.c
		Make list operations faster

2008-01-20 [colin]	3.2.0cvs54

	* src/mainwindow.c
		Fix bug 1353, 'on startup with small screen 
		layout, keyboard input gets lost'

2008-01-20 [colin]	3.2.0cvs53

	* src/textview.c
		Complete 3.2.0cvs49, and fixes bug 1477, 
		'Claws Mail crashes when view PGP-encrypted 
		message'

2008-01-20 [colin]	3.2.0cvs52

	* src/compose.c
		Fix privacy menu update when replying to
		encrypted mail and no default privacy 
		system is set

2008-01-19 [colin]	3.2.0cvs51

	* src/filtering.c
	* src/procmsg.h
	* src/plugins/bogofilter/bogofilter.c
	* src/plugins/clamav/clamav_plugin.c
	* src/plugins/spamassassin/spamassassin.c
		Batch filtering deletions too (and save 4 bytes
		per MsgInfo in the process :)

2008-01-19 [colin]	3.2.0cvs50

	* src/folder.c
		Make cache update after copies much faster
		on IMAP

2008-01-19 [colin]	3.2.0cvs49

	* src/textview.c
		Check g_fopen() success

2008-01-17 [wwp]	3.2.0cvs48

	* manual/faq.xml
	* manual/es/faq.xml
	* manual/fr/faq.xml
	* manual/pl/faq.xml
		Sylpheed? No idea what this means.

2008-01-17 [colin]	3.2.0cvs47

	* src/gtk/gtksctree.c
		Make dnd threshold higher on Maemo

2008-01-16 [colin]	3.2.0cvs46

	* src/common/passcrypt.c
		Fix build on FreeBSD, thanks to Pawel

2008-01-15 [colin]	3.2.0cvs45

	* src/compose.c
		Fix bug 1472, 'Keyboard "Menu" key doesn't call 