@@ -1,3 +1,9 @@
+2008-01-22 [holger]	3.2.0cvs59
+
+	* src/addrduplicates.c
+		Fix scrolling in addressbook duplicate
+		finder result dialog
+
 2008-01-21 [colin]	3.2.0cvs58
 
 	* src/summaryview.c
